--- a/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/reporte-sesion.xhtml
@@ -13,20 +13,20 @@
             <f:viewAction action="#{reporteSesionControlador.inicio}"/>
         </f:metadata>
         <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
-            <li class="uk-nav-header">#{etiqueta['menu']}</li>
+            <li class="uk-nav-header">#{coordinador['menu.menu']}</li>
             <li class="uk-parent uk-open">
                 <a><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
                 <h:panelGroup layout="block" rendered="#{reporteSesionControlador.idProfesor eq null}">
                     <ul class="uk-nav-sub">
                         <li class="uk-active"><h:link outcome="dashboard"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.dashboard']}</span></h:link></li>
-                        <li class="uk-active"><a onclick="atras()"><h:outputText pt:uk-icon="file-edit" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">Detalles</span></a></li>
-                        <li class="uk-active"><a><h:outputText pt:uk-icon="file-text" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">Reporte sesion</span></a></li>
+                        <li class="uk-active"><a onclick="atras()"><h:outputText pt:uk-icon="file-edit" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{coordinador['menu.detail']}</span></a></li>
+                        <li class="uk-active"><a><h:outputText pt:uk-icon="file-text" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{coordinador['menu.report']}</span></a></li>
                     </ul>
                 </h:panelGroup>
                 <h:panelGroup layout="block" rendered="#{reporteSesionControlador.idProfesor ne null}">
                     <ul class="uk-nav-sub">
                         <li class="uk-active"><h:link outcome="dashboard"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.dashboard']}</span></h:link></li>
-                        <li class="uk-active"><a><h:outputText pt:uk-icon="file-text" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">Reporte sesion</span></a></li>
+                        <li class="uk-active"><a><h:outputText pt:uk-icon="file-text" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{coordinador['menu.report']}</span></a></li>
                     </ul>
                 </h:panelGroup>
             </li>
@@ -42,7 +42,7 @@
                     <h:inputText styleClass="uk-input" value="#{reporteSesionControlador.fechaInicio}">
                         <f:convertDateTime pattern="dd/MM/yyyy"/>
                     </h:inputText>
-                    <span>to</span>
+                    <span>#{coordinador['report.sesion.to']}</span>
                     <h:inputText styleClass="uk-input" value="#{reporteSesionControlador.fechaFin}">
                         <f:convertDateTime pattern="dd/MM/yyyy"/>
                     </h:inputText>
@@ -78,9 +78,9 @@
                 </h:commandButton>
             </h:form>
         <span class="uk-margin-small-bottom uk-display-inline-block">
-            <label for="conexion" class="uk-form-label uk-margin-small-right">Tiempo de conexion:</label>
+            <label for="conexion" class="uk-form-label uk-margin-small-right">#{coordinador['report.sesion.connection.time']}</label>
             <input id="conexion" readonly="" type="text" class="uk-input uk-margin-small-right" style="width: 200px"/>
-            <label for="totalHoras" class="uk-form-label uk-margin-small-right">Total Horas:</label>
+            <label for="totalHoras" class="uk-form-label uk-margin-small-right">#{coordinador['report.sesion.total.hours']}</label>
             <input type="text" id="totalHoras" class="uk-input" style="width: 200px" />
         </span>
         <h:panelGroup layout="block" id="contenedor-tabla">
@@ -126,11 +126,11 @@
                 <table class="uk-table uk-table-hover uk-table-divider" data-vacio="true">
                     <thead>
                     <tr>
-                        <th>Fecha</th>
-                        <th>Inicio</th>
-                        <th>fecha</th>
-                        <th>fin</th>
-                        <th>Tiempo</th>
+                        <th>#{coordinador['report.sesion.table.date']}</th>
+                        <th>#{coordinador['report.sesion.table.start']}</th>
+                        <th>#{coordinador['report.sesion.table.date']}</th>
+                        <th>#{coordinador['report.sesion.table.end']}</th>
+                        <th>#{coordinador['report.sesion.table.time']}</th>
                     </tr>
                     </thead>
                     <tbody>
