mensaje licencias coordinador

--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -91,6 +91,10 @@
 
         </div>
     </section>
-
+    <script type="application/javascript">
+        if (sessionStorage.getItem('mensaje') === null){
+            sessionStorage.setItem('mensaje','true');
+        }
+    </script>
 </ui:define>
 </ui:composition>
