se dan estilos a los botones plus de administracion , cambio de color input checkbox swich,mensajes en tabla profesor tabla coordinador

--- a/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/ciclos-escolares.xhtml
@@ -36,7 +36,7 @@
                                 </h4>
                             </div>
                             <div class="uk-width-expand uk-text-right panel-icons">
-                                <button class="uk-icon-link"
+                                <button class="uk-icon-link uk-text-primary"
                                         uk-icon="icon: plus-circle; ratio: 1.5"
                                         uk-toggle="target: #modal-escuela"
                                         uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"/>
