--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -38,7 +38,7 @@
                             <div class="uk-width-expand uk-text-right panel-icons">
                                 <a href="#" class="" />
                                 <h:form>
-                                    <h:commandLink styleClass="uk-icon-link"
+                                    <h:commandLink styleClass="uk-icon-link uk-text-primary"
                                                    pt:uk-icon="icon: plus-circle; ratio: 1.5"
                                                    pt:uk-toggle="target: #modal-profesor"
                                                    pt:uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000">
