--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -88,7 +88,7 @@
                             </div>
                             <div class="uk-width-expand uk-text-right panel-icons">
                                 <h:form id="formulario-agregar-escuela">
-                                    <h:commandLink styleClass="uk-icon-link"
+                                    <h:commandLink styleClass="uk-icon-link uk-text-primary"
                                                    pt:uk-icon="icon: plus-circle; ratio: 1.5"
                                                    pt:uk-toggle="target: #modal-escuela"
                                                    pt:uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000">
