--- a/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
@@ -44,7 +44,7 @@
                             <div class="uk-grid uk-grid-small">
                                 <div class="uk-width-1-3"><h4 class="uk-text-capitalize"><span class="uk-text-middle">Grupos</span></h4></div>
                                 <h:panelGroup rendered="#{not empty grupoControlador.cicloEscolar}" layout="block" class="uk-width-expand uk-text-right panel-icons">
-                                    <a href="#" class="uk-icon-link" uk-icon="icon: plus-circle; ratio: 1.5" uk-toggle="target: #modal-grupo" uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"/>
+                                    <a href="#" class="uk-icon-link uk-text-primary" uk-icon="icon: plus-circle; ratio: 1.5" uk-toggle="target: #modal-grupo" uk-tooltip="title:#{administracion['dashboard.button.add']}; pos: left; delay: 2000"/>
                                 </h:panelGroup>
                             </div>
                         </div>
